public class AtualizarPerfilDto
{
    public string Email { get; set; }
    public string Nome { get; set; }
    public string Telefone { get; set; }
}
