public class LoginProfissional
{
    public string Email { get; set; }
    public string Senha { get; set; }
}
